centralized method-parameter classification